--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
                   id="slider"
                   name="length"
                   class="generator__slider-input"
-                  min="1"
+                  min="0"
                   max="20"
                   value="10"
+                  aria-valuemin="1"
+                  aria-valuemax="20"
+                  aria-valuenow="10"
                 />
               </div>
             </div>
